--- a/signup/signup.html
+++ b/signup/signup.html
@@ -35,7 +35,7 @@ body {
 			<div class="add-control">
 				<div class="form-group has-feedback">
 					<div class="header clearfix row">
-						<h3 class="text-muted">Scris Task Register Page</h3>
+						<h3 class="text-muted today">Scris Task Register Page</h3>
 					</div>
 					<br>
 					<input type="username" id="inputUsername" class="form-control" placeholder="username" required autofocus>
