--- a/index.html
+++ b/index.html
@@ -2,11 +2,8 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>
-			Scris Task
-		</title>
-		<script src="js/jquery-3.3.1.min.js">
-		</script>
+		<title>Scris Task</title>
+		<script src="js/jquery-3.3.1.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 		<script src="js/av-min.js"></script>
 		<meta name="viewport" content="minimal-ui,width=device-width"/>	
@@ -17,6 +14,7 @@
 		<link rel="stylesheet prefetch" href="css/bootstrap.min.css">
 		<link rel="stylesheet prefetch" href="css/animate.min.css">
 		<link rel="stylesheet" href="css/quentin.css">
+		<script type="text/javascript" src="signup/initLeanCloud.js"></script>
 		<style>
 			@font-face{
 				font-family: 'vffree72';
