--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			
 			<div class="row" id="note">
 				<div class="col-md-4 col-md-offset-4 col-xs-6 col-xs-offset-3">
-					<div id="add-control">
+					<div class="add-control">
 						<div class="form-group has-feedback">
 							<textarea type="text" id="notearea" placeholder="Enter Note (will be stored on the server forerver……)" class="form-control sbtn"></textarea>
 							<span id="noteid" style="display: none;"></span>
@@ -82,13 +82,13 @@
 			<div class="row" id="ptimer" style="display: none;">
    
 				<div class="col-md-4 col-md-offset-4 col-xs-6 col-xs-offset-3 pclock">
-						<div id="pomotoro add-control">
+						<div id="pomotoro" class="add-control">
 							<span id="pminute">Timer haven't started 00</span>
 							<span>:</span>
 							<span id="psecond">00</span>
 						</div>
 						<br>
-					<div id="psetting add-control">
+					<div id="psetting" class="add-control">
 						<div class="form-group has-feedback">
 							<input type="text" placeholder="📒 The name of the project" id="proj" class="form-control">
 						</div>
@@ -112,13 +112,13 @@
 			
 			<div class="row" id="btimer" style="display: none;">
 				<div class="col-md-4 col-md-offset-4 col-xs-6 col-xs-offset-3 pclock">
-					<div id="pomotoro add-control">
+					<div id="pomotoro" class="add-control">
 						<span id="minute">Timer haven't started 00</span>
 						<span>:</span>
 						<span id="second">00</span>
 					</div>
 					<br>
-					<div id="setting add-control">
+					<div id="setting" class="add-control">
 						<div class="form-group has-feedback" id="inputy">
 							<input type="text" placeholder="💪 Working Time/min" id="worktime" class="form-control">
 						</div>
