--- a/index.html
+++ b/index.html
@@ -187,8 +187,9 @@
 				Copyright &copy; 2015-2018 Scris Studio.<br><br><br>
 				Some CSS is from <a href="http://quentincolus.com/about.html">Quentin</a>.<br><br><br>
 				Every task here will soon be vanished tomorrow,<br><br><br>
-				if you don’t put [longterm] [plan] or [routine] in front of your task's name.<br><br><br><br>
-				<span id="haventloggedin"><a id="logintoggle">Login</a> | <a id="regtoggle">Register</a></span><span id="loggedin"><a id="logouttoggle">Log out</a></span> | <a id="ptimertoggle">Project Timer</a> | <a id="btimertoggle">Work &amp; Break Timer</a> | <a href="https://github.com/scris/scristask/" target="_self">Github</a> | <a>1.2.2.1</a>
+				if you don’t put [longterm] [plan] or [routine] in front of your task's name.<br><br><br>
+				You can also use <font class="labeleasy">[easy]</font> <font class="labeltry">[try]</font> or <font class="labelmust">[must]</font>.<br><br><br><br>
+				<span id="haventloggedin"><a id="regtoggle">Register</a></span><span id="loggedin"><a id="logouttoggle">Log out</a> | <a id="ptimertoggle">Project Timer</a> | <a id="btimertoggle">Work &amp; Break Timer</a></span> | <a href="https://github.com/scris/scristask/" target="_self">Github</a> | <a>1.2.2.1</a>
 				<br><br><br>
 			</h4>
 		</div>
