Change for Longterm and Planning tasks

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 		<div class="footer">
 			<h4>
 				Copyright &copy; 2015-2018 Scris Studio.<br><br><br>
-				Some CSS is from <a href="http://quentincolus.com/about.html">Quentin</a>.<br><br><br>
+				Based on a project from <a href="http://quentincolus.com/about.html">Quentin</a>.<br><br><br>
 				Every task here will soon be vanished tomorrow,<br><br><br>
 				if you don’t put [longterm] [plan] or [routine] in front of your task's name.<br><br><br>
 				You can also use <font class="labeleasy">[easy]</font> <font class="labeltry">[try]</font> or <font class="labelmust">[must]</font>.<br><br><br><br>
