--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 		<link rel="stylesheet" href="css/reset.min.css">
 		<link rel="stylesheet prefetch" href="css/bootstrap.min.css">
 		<link rel="stylesheet prefetch" href="css/animate.min.css">
-		<link rel="stylesheet" href="css/quentin.css">
+		<link rel="stylesheet" href="css/picnic.min.css">
+		<link rel="stylesheet" href="css/main.css">
 		<script type="text/javascript" src="signup/initLeanCloud.js"></script>
 		<style>
 			@font-face{
