tasks are able to show and edit
todo：
1. 任务应该由另一种方式呈现
2. 任务内计时器
3. 按时间顺序排列任务
4. 完成任务功能的制作

--- a/index-app.html
+++ b/index-app.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="initial-scale=1, width=device-width, height=device-height, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
     <meta name="format-detection" content="telephone=no">
     <title>Scris Task</title>
-    <link href='http://cdn.webfont.youziku.com/webfonts/nomal/123493/46822/5ba7140af629d80b5c293dd6.css' rel='stylesheet' type='text/css' />
     <style>
         body {
           background-color: #fdfdfd;
@@ -19,7 +18,7 @@
           padding-bottom: constant(safe-area-inset-bottom);
           padding-top: env(safe-area-inset-top);
           padding-bottom: env(safe-area-inset-bottom);
-          font-family: 'Aclonica';
+          font-family: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
           font-size: 32px;
           text-align: center;
         }
