--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link rel="apple-touch-icon" href="./task.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="white">
-    <link href='http://cdn.webfont.youziku.com/webfonts/nomal/123493/46822/5ba7140af629d80b5c293dd6.css' rel='stylesheet' type='text/css' />
     <title>Scris Task</title>
     <style>
         @media screen and (orientation:landscape) {
@@ -44,7 +43,7 @@
           background-position-y: 100%;
           background-attachment: fixed;
           background-size: 100% auto;
-          font-family: 'Aclonica';
+          font-family: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
         }
         #today {
           align-content: center;
