--- a/index.html
+++ b/index.html
@@ -12,13 +12,9 @@
           #container {
             position: absolute;
             top: 10%;
-            left: 50%;
+            left: 10%;
             transform: translateY(-30%);
-            transform: translateX(-50%);
-            text-align: center;
-          }
-          #rqdiv {
-            font-size: 36px;
+            transform: translateX(-10%);
           }
         }
         
@@ -26,18 +22,14 @@
           #container {
             position: absolute;
             top: 4%;
-            left: 50%;
+            left: 10%;
             transform: translateY(-30%);
-            transform: translateX(-50%);
-            text-align: center;
-          }
-          #rqdiv {
-            font-size: 28px;
+            transform: translateX(-10%);
           }
         }
+
         body {
           background-color: #fdfdfd;
-          background-image: url(https://picnicss.com/web/img/optimised.svg);
           background-repeat: no-repeat;
           background-position-x: center;
           background-position-y: 100%;
@@ -76,6 +68,112 @@
         }
         .task-card {
           width: 420px;
+        }
+        #footer {
+          margin: 2em 0 0 0;
+        }
+        #footer span {
+          color: dimgrey;
+        }
+        .input {
+          width: 15em;
+          display: inline-block;
+          -webkit-box-sizing: content-box;
+          -moz-box-sizing: content-box;
+          box-sizing: content-box;
+          border: 0 solid #b7b7b7;
+          -webkit-border-radius: 3px;
+          border-radius: 3px;
+          font: normal normal 17px/normal Arial, Helvetica, sans-serif;
+          color: rgba(0,0,0,1);
+          -o-text-overflow: clip;
+          text-overflow: clip;
+          background: rgba(252,252,252,1);
+          text-shadow: 1px 1px 0 rgba(255,255,255,0.66) ;
+          -webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+          -moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+          -o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+          transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+        }
+        .inputsmall {
+          width: 8em;
+        }
+        .button {
+          display: inline-block;
+          -webkit-box-sizing: content-box;
+          -moz-box-sizing: content-box;
+          box-sizing: content-box;
+          cursor: pointer;
+          padding: 0.6em 0 0 0;
+          border: none;
+          text-align: left;
+          -webkit-border-radius: 3px;
+          border-radius: 3px;
+          font: normal normal bold 17px/normal Arial, Helvetica, sans-serif;
+          color: rgba(0,0,0,0.9);
+          -o-text-overflow: clip;
+          text-overflow: clip;
+          background: rgba(255,255,255,0.9);
+          -webkit-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+          -moz-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+          -o-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+          transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+        }
+        .taskpane {
+          padding: 1em 0 1em 0;
+          border: none;
+          -webkit-border-radius: 3px;
+          border-radius: 3px;
+          font: normal normal 17px/normal Arial, Helvetica, sans-serif;
+          color: rgba(0,0,0,0.9);
+          -o-text-overflow: clip;
+          text-overflow: clip;
+          background: rgba(255,255,255,0.9);
+          -webkit-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+          -moz-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+          -o-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+          transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+        }
+        .tasktitle {
+          font: normal normal bold 24px/normal Arial, Helvetica, sans-serif;
+        }
+        .tasktime {
+          padding: 0.4em 0 0 0;
+          color: lightslategray;
+        }
+        .taskleft {
+            float: left;
+            width: 15em;
+        }
+        .taskright {
+          margin: 1em 0 0 15em;
+        }
+        .taskmore {
+          padding: 0.6em 0 0 0;
+          border: none;
+          -webkit-border-radius: 3px;
+          border-radius: 3px;
+          font: normal normal 17px/normal Arial, Helvetica, sans-serif;
+          color: rgba(0,0,0,0.9);
+          -o-text-overflow: clip;
+          text-overflow: clip;
+          background: rgba(255,255,255,0.9);
+          -webkit-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+          -moz-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+          -o-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+          transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+          clear: left;
+        }
+        .inputwhited {
+          background: white;
+        }
+        .loginbtn {
+          margin-top: 1em;
+        }
+        @media screen and (max-width: 600px) {
+          .inputwithpadding {
+            padding: 0.6em 0 0 0;
+          }
         }
     </style>
   </head>
