--- a/index-app.html
+++ b/index-app.html
@@ -8,7 +8,6 @@
     <style>
         body {
           background-color: #fdfdfd;
-          background-image: url(https://picnicss.com/web/img/optimised.svg);
           background-repeat: no-repeat;
           background-position-x: center;
           background-position-y: 100%;
@@ -47,6 +46,112 @@
         }
         *, *:before, *:after { 
           max-height: 100000px; 
+        }
+        #footer {
+          margin: 2em 0 0 0;
+        }
+        #footer span {
+          color: dimgrey;
+        }
+        .input {
+          width: 15em;
+          display: inline-block;
+          -webkit-box-sizing: content-box;
+          -moz-box-sizing: content-box;
+          box-sizing: content-box;
+          border: 0 solid #b7b7b7;
+          -webkit-border-radius: 3px;
+          border-radius: 3px;
+          font: normal normal 17px/normal Arial, Helvetica, sans-serif;
+          color: rgba(0,0,0,1);
+          -o-text-overflow: clip;
+          text-overflow: clip;
+          background: rgba(252,252,252,1);
+          text-shadow: 1px 1px 0 rgba(255,255,255,0.66) ;
+          -webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+          -moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+          -o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+          transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+        }
+        .inputsmall {
+          width: 8em;
+        }
+        .button {
+          display: inline-block;
+          -webkit-box-sizing: content-box;
+          -moz-box-sizing: content-box;
+          box-sizing: content-box;
+          cursor: pointer;
+          padding: 0.6em 0 0 0;
+          border: none;
+          text-align: left;
+          -webkit-border-radius: 3px;
+          border-radius: 3px;
+          font: normal normal bold 17px/normal Arial, Helvetica, sans-serif;
+          color: rgba(0,0,0,0.9);
+          -o-text-overflow: clip;
+          text-overflow: clip;
+          background: rgba(255,255,255,0.9);
+          -webkit-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+          -moz-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+          -o-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+          transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+        }
+        .taskpane {
+          padding: 1em 0 1em 0;
+          border: none;
+          -webkit-border-radius: 3px;
+          border-radius: 3px;
+          font: normal normal 17px/normal Arial, Helvetica, sans-serif;
+          color: rgba(0,0,0,0.9);
+          -o-text-overflow: clip;
+          text-overflow: clip;
+          background: rgba(255,255,255,0.9);
+          -webkit-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+          -moz-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+          -o-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+          transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+        }
+        .tasktitle {
+          font: normal normal bold 24px/normal Arial, Helvetica, sans-serif;
+        }
+        .tasktime {
+          padding: 0.4em 0 0 0;
+          color: lightslategray;
+        }
+        .taskleft {
+            float: left;
+            width: 15em;
+        }
+        .taskright {
+          margin: 1em 0 0 15em;
+        }
+        .taskmore {
+          padding: 0.6em 0 0 0;
+          border: none;
+          -webkit-border-radius: 3px;
+          border-radius: 3px;
+          font: normal normal 17px/normal Arial, Helvetica, sans-serif;
+          color: rgba(0,0,0,0.9);
+          -o-text-overflow: clip;
+          text-overflow: clip;
+          background: rgba(255,255,255,0.9);
+          -webkit-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+          -moz-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+          -o-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+          transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+          clear: left;
+        }
+        .inputwhited {
+          background: white;
+        }
+        .loginbtn {
+          margin-top: 1em;
+        }
+        @media screen and (max-width: 600px) {
+          .inputwithpadding {
+            padding: 0.6em 0 0 0;
+          }
         }
     </style>
    <script>!function(e){function t(a){if(i[a])return i[a].exports;var n=i[a]={exports:{},id:a,loaded:!1};return e[a].call(n.exports,n,n.exports,t),n.loaded=!0,n.exports}var i={};return t.m=e,t.c=i,t.p="",t(0)}([function(e,t){"use strict";Object.defineProperty(t,"__esModule",{value:!0});var i=window;t["default"]=i.flex=function(normal,e,t){var a=e||100,n=t||1,r=i.document,o=navigator.userAgent,d=o.match(/Android[\S\s]+AppleWebkit\/(\d{3})/i),l=o.match(/U3\/((\d+|\.){5,})/i),c=l&&parseInt(l[1].split(".").join(""),10)>=80,p=navigator.appVersion.match(/(iphone|ipad|ipod)/gi),s=i.devicePixelRatio||1;p||d&&d[1]>534||c||(s=1);var u=normal?1:1/s,m=r.querySelector('meta[name="viewport"]');m||(m=r.createElement("meta"),m.setAttribute("name","viewport"),r.head.appendChild(m)),m.setAttribute("content","width=device-width,user-scalable=no,initial-scale="+u+",maximum-scale="+u+",minimum-scale="+u),r.documentElement.style.fontSize=normal?"50px": a/2*s*n+"px"},e.exports=t["default"]}]); flex(false,100, 1);</script>
